[gd_scene load_steps=9 format=3 uid="uid://bjdrconndqyb4"]

[ext_resource type="Texture2D" uid="uid://cmid40lk2vvcp" path="res://Objects/Campaign/world/graphics/province_noise.tres" id="1_7hxuk"]
[ext_resource type="Script" path="res://Objects/Campaign/world/province.gd" id="1_lhs2u"]
[ext_resource type="Shader" path="res://Objects/Campaign/world/province_occupied.gdshader" id="1_upgv0"]
[ext_resource type="PackedScene" uid="uid://hb4l2h7cpx1y" path="res://Objects/Campaign/world/pos_province.tscn" id="2_h2bx7"]
[ext_resource type="Texture2D" uid="uid://cbtyyymd445vd" path="res://Objects/Campaign/world/graphics/province_occupation_stripes.png" id="2_varc2"]
[ext_resource type="Resource" uid="uid://dhnhandtoa6w6" path="res://Objects/Campaign/world/map_colors.tres" id="2_xfuls"]
[ext_resource type="Resource" uid="uid://danxlrxr3d84l" path="res://Objects/Campaign/buildings/buildings_start.tres" id="4_kq3l2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_e0o15"]
shader = ExtResource("1_upgv0")
shader_parameter/occupant_color = Vector4(1, 1, 1, 1)

[node name="Province" type="Polygon2D" groups=["provinces"]]
process_mode = 3
z_index = 20
z_as_relative = false
texture_repeat = 2
position = Vector2(40.8954, -44.7896)
scale = Vector2(1.15609, 1.26503)
color = Color(1, 0, 1, 1)
texture = ExtResource("1_7hxuk")
script = ExtResource("1_lhs2u")
width = 4.0
map_colors = ExtResource("2_xfuls")
base_income = 11.0
culture = 0
buildings_manager = ExtResource("4_kq3l2")

[node name="PosProvince" parent="." instance=ExtResource("2_h2bx7")]
unique_name_in_owner = true
metadata/_edit_lock_ = true

[node name="Border" type="Line2D" parent="."]
unique_name_in_owner = true
use_parent_material = true
width = 4.0
default_color = Color(0, 0, 0, 1)
texture = ExtResource("1_7hxuk")
texture_mode = 1
antialiased = true
metadata/_edit_lock_ = true

[node name="MouseDetector" type="Area2D" parent="."]
unique_name_in_owner = true
process_mode = 3
collision_mask = 0
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="MouseDetector"]
visible = false
z_index = 50
z_as_relative = false

[node name="OccupationStrips" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture_repeat = 2
material = SubResource("ShaderMaterial_e0o15")
position = Vector2(23.0126, 38.5681)
scale = Vector2(5.54807, 4.08835)
texture = ExtResource("2_varc2")

[connection signal="sg_mouse_over_self" from="." to="." method="_on_sg_mouse_over_self"]
[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="area_entered" from="MouseDetector" to="." method="_on_mouse_detector_area_entered"]
[connection signal="area_exited" from="MouseDetector" to="." method="_on_mouse_detector_area_exited"]
[connection signal="mouse_entered" from="MouseDetector" to="." method="_on_mouse_detector_mouse_entered"]
[connection signal="mouse_exited" from="MouseDetector" to="." method="_on_mouse_detector_mouse_exited"]

[editable path="PosProvince"]
